Fix detachable footer issue on mobile

--- a/src/styles/globalStyle.css
+++ b/src/styles/globalStyle.css
@@ -4,6 +4,10 @@
 }
 
 html {
+    background-image: url(../images/pizza.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     font-family: 'Ferrum', Times, serif;
     width: 100%;
     height: 100%;
@@ -11,18 +15,8 @@ html {
     padding: 0;
     -webkit-user-select: none;
     -ms-user-select: none;
+    touch-action: manipulation;
     user-select: none;
-}
-
-body {
-    background-image: url(../images/pizza.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
 }
 
 #content {
@@ -73,11 +67,6 @@ body {
     color: rgb(255, 255, 255);
     font-style: italic;
     align-self: flex-start;
-}
-.tabs:hover,
-.main:hover {
-    color: rgb(254, 153, 0);
-    transform: translateY(5%);
 }
 
 .active {
